--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-libu2f-server (0.0.0-2) utopic; urgency=medium
+libu2f-server (0.0.0-3~ppa1~vivid1) vivid; urgency=medium
 
   * Initial release. (Closes: #XXXXXX)
 
