--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libu2f-server (1.0.0-1) unstable; urgency=low
+
+  * Stable release.
+  * Improved build on other achitactures. (Closes: #787133)
+
+ -- Alessio Di Mauro <alessio@yubico.com>  Wed, 01 Jul 2015 15:49:27 +0200
+
 libu2f-server (0.0.0-1) unstable; urgency=low
 
   * Initial release. (Closes: #775597)
