--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,12 @@
 libu2f-server (1.0.0-1) unstable; urgency=low
 
-  * Stable release.
+  [ Alessio Di Mauro ]
+  * New upstream release.
   * Improved build on other achitectures. (Closes: #787133)
+
+  [ Simon Josefsson ]
+  * Update README.source.
+  * Add gbp.conf.
 
  -- Alessio Di Mauro <alessio@yubico.com>  Wed, 01 Jul 2015 15:49:27 +0200
 
