--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ libu2f-server (1.0.0-1) unstable; urgency=low
   [ Simon Josefsson ]
   * Update README.source.
   * Add gbp.conf.
+  * Update upstream-signing-key.pgp.
 
  -- Alessio Di Mauro <alessio@yubico.com>  Wed, 01 Jul 2015 15:49:27 +0200
 
