--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,9 @@
 libu2f-server NEWS -- History of user-visible changes.          -*- outline -*-
 
+* Version 1.0.1 (released 2015-07-09)
+ ** General fixes and improvements.
+ ** Changed pkg-config settings to accommodate changes in OpenSSL.
+
 * Version 1.0.0 (released 2015-07-01)
  ** Improved compatibility for other architectures.
 
