--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libu2f-server (1.0.1-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ -- Alessio Di Mauro <alessio@yubico.com>  Thu, 09 Jul 2015 10:53:21 +0200
+
 libu2f-server (1.0.0-1) unstable; urgency=low
 
   [ Alessio Di Mauro ]
