--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 libu2f-server (1.0.1-1) unstable; urgency=medium
 
   * New upstream release.
+    - Closes: #787133.
 
  -- Alessio Di Mauro <alessio@yubico.com>  Thu, 09 Jul 2015 10:53:21 +0200
 
