--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libu2f-server (1.0.1-2) unstable; urgency=medium
+
+  * Acknowledge NMU, thanks Nicolas.
+
+ -- Simon Josefsson <simon@josefsson.org>  Wed, 10 Aug 2016 16:38:42 +0200
+
 libu2f-server (1.0.1-1.3) unstable; urgency=medium
 
   * Non-maintainer upload.
