--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libu2f-server (1.1.0-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ -- Alessio Di Mauro <alessio@yubico.com>  Thu, 04 Jan 2018 16:46:23 +0100
+
 libu2f-server (1.0.1-2) unstable; urgency=medium
 
   * Acknowledge NMU, thanks Nicolas.
